--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Personal Landing Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+        .social-links {
+            margin-top: 20px;
+        }
+        .social-links a {
+            display: inline-block;
+            margin-right: 10px;
+            color: #333;
+            text-decoration: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Welcome to My Personal Landing Page</h1>
+        <p>Hello, I'm [Your Name]. I'm passionate about [Your Passion/Interest].</p>
+        <p>Connect with me:</p>
+        <div class="social-links">
+            <a href="https://twitter.com/your_username" target="_blank">Twitter</a>
+            <a href="https://www.linkedin.com/in/your_profile" target="_blank">LinkedIn</a>
+            <a href="https://github.com/your_username" target="_blank">GitHub</a>
+            <!-- Add more social links as needed -->
+        </div>
+    </div>
+</body>
+</html>
+
