--- a/index.html
+++ b/index.html
@@ -1,53 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Landing Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
+<title>CSS Template</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  -height: 1000vh;
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: rgb(37, 57, 91);
+  font-size: 16pt;
+}
+
+img{
+    height: 300px;
+    border-radius: 50%;
+    border: 12px ;
+    float: left;
+    margin-right: 20px;
+}
+/* Style the header */
+header {
+  background-color: #666;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: white;
+}
+/* Style for the navigation pane */
+.topnav {
+            background-color: white; /* Background color */
+            overflow: hidden; /* Ensure overflow is hidden */
         }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+        /* Style for navigation links */
+        .topnav a {
+            float: right; /* Float the links to the left */
+            display: block; /* Display links as block elements */
+            color: black; /* Link text color */
+            text-align: right; /* Center-align text */
+            padding: 30px 50px; /* Padding around the text */
+            text-decoration: none; /* Remove underline */
+            font-family: Verdana, Geneva, Tahoma, sans-serif;  
+            font-size: 30px;
         }
-        h1 {
-            color: #333;
+
+        /* Change color of links on hover */
+        .topnav a:hover {
+            background-color: cyan; /* Background color on hover */
+            color: #333; /* Text color on hover */
         }
-        p {
-            color: #666;
+        .topnav a.split {
+            float: left;
+            background-color: white;
+            color: black;
         }
-        .social-links {
-            margin-top: 20px;
-        }
-        .social-links a {
-            display: inline-block;
-            margin-right: 10px;
-            color: #333;
-            text-decoration: none;
-        }
-    </style>
+/* Create two columns/boxes that floats next to each other */
+nav {
+  float: left;
+  width: 30%;
+  height: 300px; /* only for demonstration, should be removed */
+  background: #ccc;
+  padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+article {
+  float: right;
+  padding: 20px;
+  width: 70%;
+  background-color: #f1f1f1;
+  height: 300px; /* only for demonstration, should be removed */
+}
+
+/* Clear floats after the columns */
+section::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the footer */
+footer {
+  background-color: #777;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
+}
+</style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to My Personal Landing Page</h1>
-        <p>Hello, I'm [Your Name]. I'm passionate about [Your Passion/Interest].</p>
-        <p>Connect with me:</p>
-        <div class="social-links">
-            <a href="https://twitter.com/your_username" target="_blank">Twitter</a>
-            <a href="https://www.linkedin.com/in/your_profile" target="_blank">LinkedIn</a>
-            <a href="https://github.com/your_username" target="_blank">GitHub</a>
-            <!-- Add more social links as needed -->
-        </div>
-    </div>
+
+
+<div class="topnav">
+    <a href="#home">Home</a>
+    <a href="#news">News</a>
+    <a href="#about" class="split">Michael Litainas</a>
+</div>  
+
+<section>
+    <img src="avatar.jpg" width="300" alt="Personal image">
+  
+  <article>
+    <h1>Welcome to my website!</h1> 
+        <p>I am Michael, a PhD srtudent in the University of Sheffield. 
+           I'm a PhD student in the Department of Economics at the University of Sheffield.
+           My main research interests are in the are of Empirical Macroeconomics and time-series econometrics. 
+           I enjoy programming in R.</p> 
+  </article>
+</section>
+
+
+<section>
+  <article>
+       
+  </article>
+  
+  <article>
+    <h1>London</h1>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+    <p>Standing on the River Thames, London has been a major settlement for two .</p>
+  </article>
+</section>
+
+
+
+<footer>
+    &lt;&lt;&lt; &copy; <a href="about.html"> Michael Litainas </a> &gt;&gt;&gt;
+</footer>
 </body>
 </html>
 
