test the mobile

--- a/index.html
+++ b/index.html
@@ -127,6 +127,23 @@ footer {
     height: auto;
   }
 }
+
+ /* Media query for smartphones (up to 767px) */
+ @media (max-width: 767px) {
+        /* Define styles specific to smartphones */
+        /* For example: */
+        /* Adjust font sizes, margins, paddings, etc. */
+    }
+
+    /* Media query for tablets (768px - 1023px) */
+    @media (min-width: 768px) and (max-width: 1023px) {
+        /* Define styles specific to tablets */
+    }
+
+    /* Media query for desktops and larger screens (min-width: 1024px) */
+    @media (min-width: 1024px) {
+        /* Define styles specific to desktops and larger screens */
+    }
 </style>
 </head>
 <body>
