--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@ footer {
 <div>
   <article class="shortbio">
     <h1>Hi!</h1> 
-     <p>I am Michael, a PhD srtudent in the University of Sheffield. 
-        I'm a PhD student in the Department of Economics at the University of Sheffield.
+     <p>I'm a PhD student in the Department of Economics at the University of Sheffield.
         My main research interests are in the area of Applied Macroeconomics and time-series econometrics. 
         I enjoy programming in R.</p> 
 
