--- a/index11.html
+++ b/index11.html
@@ -1,52 +1,253 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+<title>CSS Template</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Font Awesome for icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<style>
+* {
+  box-sizing: border-box;
+}
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="author" content= "Michael">
-        <title> mlitainas </title>
-        <link rel="icon" href="avatar.jpg" type="image/x-icon" >
-        <link rel="stylesheet" href="main.css">
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: #434e5f;
+  font-size: 16pt;
+}
 
-    </head>
-    <body>
-        <img src="avatar.jpg" width="300" alt="Personal image">
-       <h1>Welcome to my website!</h1> 
-        <hr>
-        <h2>I am Michael, a PhD srtudent in the University of Sheffield.</h2> 
-        <p>This is my first webpage blah blah blah 
-            <br>webpage blah blah blah 
-        </p>
-        <hr>
-        <!--This is a comment--> 
-       <h2>I am <abbr title="Michail Litainas"> 
-        <a href="https://github.com/mlitainas" > Michael </a> </abbr> a PhD srtudent in the University of Sheffield.</h2> 
-        <p>This is my first paragraph <strong>blah blah blah </strong> </p>
-            <ol>
-                <li>  Michalis     </li>
-                <li>  Ioanna       </li>
-                <li>
-                    <p> Groceries needed:</p>
-                    <p>
-                        Take blah blah
-                    </p>
-                </li>
-            </ol>
-       <h3> Description list </h3>
-            <dl>
-               <dt>Norht pole</dt>
-               <dd>I hear this is <strong> cold</strong>! </dd> 
-            </dl>
-       
-       
-       <p><em>This is a second paragraph.</em> </p>
-       <ul>
-        <li> Michalis</li>
-        <li>Ioanna </li>
-       </ul>
+img {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  border: 12px;
+  margin: 30px;
+}
+
+.mydiv {
+  height: 300px;
+  color: white;
+  margin: 10px 0;
+  clear: both;
+}
+
+/* Style the header */
+header {
+  background-color: #666;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: white;
+}
+
+/* Style for the navigation pane */
+.topnav {
+  background-color: white;
+  overflow: hidden;
+}
+
+/* Style for navigation links */
+.topnav a {
+  float: right;
+  display: block;
+  color: black;
+  text-align: right;
+  padding: 20px 30px;
+  text-decoration: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 30px;
+}
+
+/* Change color of links on hover */
+.topnav a:hover {
+  background-color: rgb(174, 176, 176);
+  color: #333;
+}
+
+.topnav a.split {
+  float: left;
+  background-color: white;
+  color: black;
+}
+
+/* Clear floats */
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.shortbio,
+.research,
+.workexp,
+.code {
+  padding: 20px;
+  background-color: #ffffff;
+  margin-bottom: 20px;
+}
+
+/* Columns for content */
+.column {
+  float: left;
+  width: 100%;
+  padding: 10px;
+}
+
+@media (min-width: 768px) {
+  .column {
+    width: 50%;
+  }
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.container .column {
+  flex: 1;
+  min-width: 50%;
+}
+
+@media (max-width: 767px) {
+  .container .column {
+    min-width: 100%;
+  }
+}
+
+/* Style the footer */
+footer {
+  background-color: #777;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+
+/* Responsive layout for navigation */
+@media (max-width: 600px) {
+  .topnav a {
+    float: none;
+    display: block;
+    text-align: center;
+  }
+  img {
+    display: block;
+    margin: 20px auto;
+    float: none;
+  }
+  .shortbio,
+  .research,
+  .workexp,
+  .code {
+    width: 100%;
+    float: none;
+  }
+}
+
+.section_title{
+  height: 30px;
+  color: white;
+  margin: 10px 0;
+  clear: both;
+}
 
 
-       &lt;&lt;&lt; &copy; <a href="about.html"> Michael Litainas </a> &gt;&gt;&gt;
-    </body>
+.avatar_img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+.social-icons {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.social-icons a {
+  color: white;
+  text-decoration: none;
+  margin: 0 10px;
+  font-size: 50px;
+}
+
+.social-icons a:hover {
+  color: #ccc;
+}
+</style>
+</head>
+<body>
+
+<div class="topnav">
+  <a href="#home">Home</a>
+  <a href="#research">Research</a>
+  <a href="#news"></a>
+  <a href="#about" class="split">Michael Litainas</a>
+</div>
+<hr>
+
+<section class="clearfix">
+    <img src="avatar.jpg" alt="Personal image" class="avatar_img">
+</section>
+
+<section class="clearfix">
+  <div class="social-icons">
+  <a href="https://github.com/mlitainas" target="_blank"><i class="fab fa-github"></i></a>
+  <a href="https://www.linkedin.com/in/michael-litainas/" target="_blank"><i class="fab fa-linkedin"></i></a>
+  <a href="https://www.linkedin.com/in/michael-litainas/" target="_blank"><i class="fab fa-twitter"></i></a>
+  </div>
+</section>
+
+
+ <article class="shortbio">
+    <h1>Hi!</h1>
+    <p>I'm a PhD student in the Department of Economics at the University of Sheffield. My main research interests are in the area of Applied Macroeconomics and time-series econometrics. I enjoy programming in R.</p>
+    <div class="container">
+      <div class="column">
+        <p><b>Research Interests.</b></p>
+        <ul>
+          <li>Applied Macroeconomics</li>
+          <li>Time-series econometrics</li>
+          <li>Fiscal policy</li>
+          <li>Monetary policy</li>
+          <li>Production networks</li>
+        </ul>
+      </div>
+      <div class="column">
+        <p><b>Education</b></p>
+        <ul class="fa-ul">
+          <li>PhD in Economics</li>
+          <dt><small>University of Sheffield, UK</small></dt>
+          <dt><hr color="white"></dt>
+          <li>MSc in Economics</li>
+          <dt><small>University of Macedonia, Greece</small></dt>
+          <dt><hr color="white"></dt>          <li>BSc in Economics</li>
+          <dt><small>University of Macedonia, Greece</small></dt>
+        </ul>
+      </div>
+    </div>
+  </article>
+
+
+<hr color="#434e5f">
+
+<section>
+  <div class="section_title"><h2>Research</h2></div>
+  <article class="research">
+    <p>Work in progress. Drafts coming soon!</p>
+    <p>“The sectoral effects of oil supply shocks: evidence for the UK” (2024)</p>
+    <p>"Sectoral Government spending multipliers in a production network: an empirical investigation for the UK”</p>
+    <p>“The international transmission of US government spending shocks”(2021)</p>
+    <p>“The spatial dimension of the macroeconomic effects of labour reallocation. An empirical application for the U.S.” (2019) with T.Panagiotidis</p>
+  </article>
+</section>
+
+<hr color="#434e5f">
+
+<footer>
+  &lt;&lt;&lt; &copy; <a href="about.html">Michael Litainas</a> &gt;&gt;&gt;
+</footer>
+</body>
 </html>
