--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>mlitainas</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Font Awesome for icons -->
@@ -181,12 +181,12 @@ footer {
 <body>
 
 <div class="topnav">
-  <a href="#home">Home</a>
-  <a href="#research">Research</a>
+  <a href="#home" id="home">Home</a>
+  <a href="#research" target="research_block">Research</a>
   <a href="#news"></a>
   <a href="#about" class="split">Michael Litainas</a>
 </div>
-<hr>
+
 
 <section class="clearfix">
     <img src="avatar.jpg" alt="Personal image" class="avatar_img">
@@ -194,15 +194,16 @@ footer {
 
 <section class="clearfix">
   <div class="social-icons">
-  <a href="https://github.com/mlitainas" target="_blank"><i class="fab fa-github"></i></a>
-  <a href="https://www.linkedin.com/in/michael-litainas/" target="_blank"><i class="fab fa-linkedin"></i></a>
-  <a href="https://www.linkedin.com/in/michael-litainas/" target="_blank"><i class="fab fa-twitter"></i></a>
-  </div>
+  <a href= "https://github.com/mlitainas" target="_blank"><i class="fab fa-github"></i></a>
+  <a href= "https://www.linkedin.com/in/michael-litainas/" target="_blank"><i class="fab fa-linkedin"></i></a>
+  <a href= "https://x.com/MLitainas" target="_blank"><i class="fab fa-twitter"></i></a>
+  <a href= "https://drive.google.com/file/d/14q9qS54VKokPW_2GTxwlAqfbVQ5Hvsy-/view?usp=drive_link" target="_blank"><i class="fa-regular fa-file"></i></a>
+ </div>
 </section>
 
 
  <article class="shortbio">
-    <h1>Hi!</h1>
+    <h1>Welcome to my website!</h1>
     <p>I'm a PhD student in the Department of Economics at the University of Sheffield. My main research interests are in the area of Applied Macroeconomics and time-series econometrics. I enjoy programming in R.</p>
     <div class="container">
       <div class="column">
@@ -234,7 +235,7 @@ footer {
 <hr color="#434e5f">
 
 <section>
-  <div class="section_title"><h2>Research</h2></div>
+  <div class="section_title" id="research"><h2>Research</h2></div>
   <article class="research">
     <p>Work in progress. Drafts coming soon!</p>
     <p>“The sectoral effects of oil supply shocks: evidence for the UK” (2024)</p>
@@ -247,7 +248,7 @@ footer {
 <hr color="#434e5f">
 
 <footer>
-  &lt;&lt;&lt; &copy; <a href="about.html">Michael Litainas</a> &gt;&gt;&gt;
+  &lt;&lt;&lt; &copy; <a href="#home">Michael Litainas</a> &gt;&gt;&gt;
 </footer>
 </body>
 </html>
