--- a/index11.html
+++ b/index11.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>mlitainas</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Font Awesome for icons -->
@@ -176,17 +176,29 @@ footer {
 .social-icons a:hover {
   color: #ccc;
 }
+
+.custom-link {
+    color: black;          /* Makes the link text black */
+    font-family: Arial, sans-serif; /* Changes the font to Arial */
+    text-decoration: none; /* Removes the underline */
+}
+
+.custom-link:hover {
+    text-decoration: underline; /* Optional: adds underline on hover */
+}
+
+
 </style>
 </head>
 <body>
 
 <div class="topnav">
-  <a href="#home">Home</a>
-  <a href="#research">Research</a>
+  <a href="#home" id="home">Home</a>
+  <a href="#research" target="research_block">Research</a>
   <a href="#news"></a>
   <a href="#about" class="split">Michael Litainas</a>
 </div>
-<hr>
+
 
 <section class="clearfix">
     <img src="avatar.jpg" alt="Personal image" class="avatar_img">
@@ -194,16 +206,22 @@ footer {
 
 <section class="clearfix">
   <div class="social-icons">
-  <a href="https://github.com/mlitainas" target="_blank"><i class="fab fa-github"></i></a>
-  <a href="https://www.linkedin.com/in/michael-litainas/" target="_blank"><i class="fab fa-linkedin"></i></a>
-  <a href="https://www.linkedin.com/in/michael-litainas/" target="_blank"><i class="fab fa-twitter"></i></a>
-  </div>
+  <a href= "https://github.com/mlitainas" target="_blank"><i class="fab fa-github"></i></a>
+  <a href= "https://www.linkedin.com/in/michael-litainas/" target="_blank"><i class="fab fa-linkedin"></i></a>
+  <a href= "https://x.com/MLitainas" target="_blank"><i class="fab fa-twitter"></i></a>
+  <a href="https://scholar.google.com/" target="_blank">
+    <i class="fas fa-graduation-cap"></i> 
+</a>
+<a href= "https://drive.google.com/file/d/14q9qS54VKokPW_2GTxwlAqfbVQ5Hvsy-/view?usp=drive_link" target="_blank"><i class="fa-regular fa-file"></i></a>
+
+</div>
 </section>
 
 
  <article class="shortbio">
-    <h1>Hi!</h1>
-    <p>I'm a PhD student in the Department of Economics at the University of Sheffield. My main research interests are in the area of Applied Macroeconomics and time-series econometrics. I enjoy programming in R.</p>
+    <h1>Welcome to my website!</h1>
+    <p> I am an applied Macroeconomist, with strong interest in data analysis and empirical research methods. My work has covered a range of topics in the areas of international economics, fiscal and monetary policy and oil shocks. I have a solid  background in time-series and panel data econometrics, along with advanced programming skills in several programming
+      languages. </p>
     <div class="container">
       <div class="column">
         <p><b>Research Interests.</b></p>
@@ -234,20 +252,39 @@ footer {
 <hr color="#434e5f">
 
 <section>
-  <div class="section_title"><h2>Research</h2></div>
+  <div class="section_title" id="research"><h2>Research</h2></div>
+  
   <article class="research">
-    <p>Work in progress. Drafts coming soon!</p>
-    <p>“The sectoral effects of oil supply shocks: evidence for the UK” (2024)</p>
-    <p>"Sectoral Government spending multipliers in a production network: an empirical investigation for the UK”</p>
-    <p>“The international transmission of US government spending shocks”(2021)</p>
-    <p>“The spatial dimension of the macroeconomic effects of labour reallocation. An empirical application for the U.S.” (2019) with T.Panagiotidis</p>
+   
+    <p style="font-family: sans-serif;" > <b style = "font-size:24px"> Working papers. </b> </p>
+    
+    <!--link to paper-->
+    <p style = "font-size:18px">
+      <a href="https://drive.google.com/file/d/1rUuyOiw7j3YwUO3HTv-LDkm48o2cbP8v/view?usp=sharing" 
+      class="custom-link" target="_blank"> “The international transmission of US government spending shocks” (2024)  </a>
+      <span style ="font-size:16px" > with P.McAdam, A.Montagnoli, K.Mouratidis [under submission] </span>
+    </p>
+    <!--title-->
+    <p style="font-family: sans-serif;", sans-serif;> <b style = "font-size:24px"> Work in progress. </b>
+       <span style ="font-size:17px" style="font-family: Arial, sans-serif;">  Drafts coming soon 😅 ! </span> 
+    </p> 
+    <!--paper-->
+    <p style = "font-size:18px" > “The sectoral effects of oil supply shocks: evidence for the UK” </p>
+    <!--paper-->
+    <p style = "font-size:18px"> "Sectoral Government spending multipliers in a production network: an empirical investigation for the UK”</p>
+    <!--paper-->
+    <p style = "font-size:18px"> 
+      “The cross-border propagation of sectoral shocks. An empirical examination for the U.S.”  
+      <span style ="font-size:18px" > with T.Panagiotidis </span>
+    </p>
+  
   </article>
 </section>
 
 <hr color="#434e5f">
 
 <footer>
-  &lt;&lt;&lt; &copy; <a href="about.html">Michael Litainas</a> &gt;&gt;&gt;
+  &lt;&lt;&lt; &copy; <a href="#home">Michael Litainas</a> &gt;&gt;&gt;
 </footer>
 </body>
 </html>
