--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ footer {
   <a href= "https://github.com/mlitainas" target="_blank"><i class="fab fa-github"></i></a>
   <a href= "https://www.linkedin.com/in/michael-litainas/" target="_blank"><i class="fab fa-linkedin"></i></a>
   <a href= "https://x.com/MLitainas" target="_blank"><i class="fab fa-twitter"></i></a>
-  <a href="https://scholar.google.com/" target="_blank">
+  <a href="https://scholar.google.com/citations?user=JHf9Y4kAAAAJ&hl=en&authuser=1&oi=ao" target="_blank">
     <i class="fas fa-graduation-cap"></i> 
 </a>
 <a href= "https://drive.google.com/file/d/14q9qS54VKokPW_2GTxwlAqfbVQ5Hvsy-/view?usp=drive_link" target="_blank"><i class="fa-regular fa-file"></i></a>
