--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@ footer {
 
 .custom-link:hover {
     text-decoration: underline; /* Optional: adds underline on hover */
+    color: rgb(142, 9, 51)
 }
 
 
@@ -262,7 +263,7 @@ footer {
     <p style = "font-size:18px">
       <a href="https://drive.google.com/file/d/1rUuyOiw7j3YwUO3HTv-LDkm48o2cbP8v/view?usp=sharing" 
       class="custom-link" target="_blank"> “The international transmission of US government spending shocks” (2024)  </a>
-      <span style ="font-size:16px" > with P.McAdam, A.Montagnoli, K.Mouratidis [under submission] </span>
+      <span style ="font-size:16px" > with P.McAdam, A.Montagnoli, K.Mouratidis <span style="color:rgb(218, 2, 95);" > [under submission] </span>
     </p>
     <!--title-->
     <p style="font-family: sans-serif;", sans-serif;> <b style = "font-size:24px"> Work in progress. </b>
