--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ header {
 
 /* Style the footer */
 footer {
-  background-color: #777;
+  background-color: #acbed46e;
   padding: 10px;
   text-align: center;
   color: white;
@@ -285,7 +285,7 @@ footer {
 <hr color="#434e5f">
 
 <footer>
-  &lt;&lt;&lt; &copy; <a href="#home">Michael Litainas</a> &gt;&gt;&gt;
+  &lt;&lt;&lt; &copy; <a href="#home"> <span style="color:rgb(63, 30, 51);" >  Michael Litainas </span> </a> &gt;&gt;&gt;
 </footer>
 </body>
 </html>
