--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ footer {
 
  <article class="shortbio">
     <h1>Welcome to my website!</h1>
-    <p> I am an applied Macroeconomist, with strong interest in data analysis and empirical research methods. My work has covered a range of topics in the areas of international economics, fiscal and monetary policy and oil shocks. I have a solid  background in time-series and panel data econometrics, along with advanced programming skills in several programming
+    <p> I am an applied Macroeconomist, with a strong interest in data analysis and empirical research methods. My work has covered a range of topics in the areas of international economics, fiscal and monetary policy and oil shocks. I have a solid  background in time-series and panel data econometrics, along with advanced programming skills in several programming
       languages. </p>
     <div class="container">
       <div class="column">
